<resources>
    <string name="app_name">5П</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="hello_world">Hello, world!</string>
    <string name="plus">Новый проект!</string>
    <string name="enter_name">Название проекта…</string>
    <string name="new_project_str">Мой новый проект</string>
    <string name="project_number">#0</string>
    <string name="status">status</string>
    <string name="my_task">Мои задачи:</string>
    <string name="name_project_str">Название проекта:</string>
    <string name="purpose_project">Цель проекта:</string>
    <string name="help_str">Помощь</string>
    <string name="save_str">Сохранить</string>
    <string name="save_name_str">Изменить имя проекта</string>
    <string name="save_purpose_str">Изменить цель проекта</string>
    <string name="delete_project_str">Удалить проект</string>
    <string name="no_data_available">Нет данных!</string>
</resources>
